--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
 
 <body>
     <main>
-        <h1>My todos</h1>
-        <div id="add-todo">
-            <input type="text" id="inp-new-todo" placeholder="Enter a new todo">
-            <button id="btn-add-todo" class="btn-primary">Add todo</button>
+        <div id="header">
+            <h1>my todos</h1>
+            <ul id="filters"></ul>
         </div>
-        <button id="btn-remove-done" class="btn-secondary">Remove done todos</button>
-        <ul id="filters"></ul>
-        <ul id="list"></ul>
+        <div id="content">
+            <ul id="list"></ul>
+        </div>
+        <div id="container-modify-list">
+            <form id="add-todo">
+                <input type="text" id="inp-new-todo" placeholder="enter a new todo...">
+                <button id="btn-add-todo" class="btn-primary">add todo</button>
+            </form>
+            <button id="btn-remove-done" class="btn-secondary">clear done todos</button>
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
