feat: remove done todos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <input type="text" id="inp-new-todo" placeholder="enter a new todo...">
                 <button id="btn-add-todo" class="btn-primary">add todo</button>
             </form>
-            <button id="btn-remove-done" class="btn-secondary">clear done todos</button>
+            <button id="btn-remove-done" class="btn-secondary">remove done todos</button>
         </div>
     </main>
     <script src="script.js"></script>
