feat: improved responsiveness for mobile

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="container-modify-list">
             <form id="add-todo">
                 <input type="text" id="inp-new-todo" placeholder="enter a new todo...">
-                <button id="btn-add-todo" class="btn-primary">add todo</button>
+                <button id="btn-add-todo" class="btn-primary">add</button>
             </form>
             <button id="btn-remove-done" class="btn-secondary">remove done todos</button>
         </div>
